# full-stack-fastapi

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: main.py
backend/app/: crud.py  main.py  models.py
backend/app/api/: main.py
backend/app/api/notes/: notes.py
backend/app/api/pages/: pages.py
backend/app/common/: md2html.py
backend/app/core/: config.py  db.py  path_config.py
backend/ssr/: urls.py
backend/uploads/notes/: test.md
backend/uploads/pages/: about.md
frontend/static/scripts/: note.js  page.js
frontend/templates/: base.html  navbar.html
frontend/templates/notes/: note.html
frontend/templates/pages/: about.html  index.html
src/: .env_example  main.py
src/app/: main.py  models.py  utils.py
src/app/api/: main.py
src/app/api/routes/: notes.py  pages.py
src/app/core/: config.py  path_config.py  security.py
src/app/services/: md2html.py
src/ssr/: main.py
src/ssr/core/: path_config.py
src/ssr/routes/: notes.py  pages.py
src/ssr/services/: api_service.py  note_service.py  page_service.py
src/ssr/static/scripts/: package-lock.json  page.js  tailwind.config.js
src/ssr/static/styles/: input.css  output.css
src/ssr/templates/: base.html  error.html
src/ssr/templates/backup/: about.html  base.html  header.html  index.html  navbar.html
src/ssr/templates/notes/: index.html  note.html  readme.html
src/ssr/templates/pages/: index.html  page.html
