[project]
name = "full-stack-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.2",
    "loguru>=0.7.2",
    "lxml>=5.3.0",
    "markdown2>=2.5.0",
    "nh3>=0.2.18",
    "pydantic-settings>=2.5.2",
    "python-frontmatter>=1.1.0",
    "ruff>=0.6.9",
    "sentry-sdk>=2.16.0",
]
